[gd_scene load_steps=5 format=3 uid="uid://cy8yitgsn8y74"]

[ext_resource type="Script" path="res://scripts/control.gd" id="1_36pqa"]
[ext_resource type="Texture2D" uid="uid://doihh3jn6466p" path="res://AlbumCover_BabyShark_Soundtrack_450.jpg" id="2_ldey4"]
[ext_resource type="Texture2D" uid="uid://c4umekvn4i4ks" path="res://Believer.jpg" id="2_lt4a8"]
[ext_resource type="Script" path="res://scripts/song_cover_image.gd" id="3_4hx77"]

[node name="Control" type="Node2D"]
position = Vector2(46, 55)
scale = Vector2(0.7, 0.662)
script = ExtResource("1_36pqa")

[node name="Beliver" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(0.7, 0.662)

[node name="cover_image" type="Sprite2D" parent="Beliver"]
position = Vector2(177, 168)
scale = Vector2(0.7, 0.662)
texture = ExtResource("2_lt4a8")
script = ExtResource("3_4hx77")

[node name="BabyShark" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(0.7, 0.662)

[node name="cover_image" type="Sprite2D" parent="BabyShark"]
position = Vector2(709.5, 164)
scale = Vector2(0.7, 0.662)
texture = ExtResource("2_ldey4")
script = ExtResource("3_4hx77")

[node name="Level1" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(0.7, 0.662)

[node name="cover_image" type="Sprite2D" parent="Level1"]
position = Vector2(1246, 183)
scale = Vector2(0.7, 0.662)
texture = ExtResource("2_ldey4")
script = ExtResource("3_4hx77")

[node name="Level2" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(0.7, 0.662)

[node name="cover_image" type="Sprite2D" parent="Level2"]
position = Vector2(188, 583)
scale = Vector2(0.7, 0.662)
texture = ExtResource("2_ldey4")
script = ExtResource("3_4hx77")

[node name="Level3" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(0.7, 0.662)

[node name="cover_image" type="Sprite2D" parent="Level3"]
position = Vector2(706, 583)
scale = Vector2(0.7, 0.662)
texture = ExtResource("2_ldey4")
script = ExtResource("3_4hx77")

[node name="Level4" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(0.7, 0.662)

[node name="cover_image" type="Sprite2D" parent="Level4"]
position = Vector2(1246, 595)
scale = Vector2(0.7, 0.662)
texture = ExtResource("2_ldey4")
script = ExtResource("3_4hx77")

[node name="Level5" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(0.7, 0.662)

[node name="cover_image" type="Sprite2D" parent="Level5"]
position = Vector2(190, 1009)
scale = Vector2(0.7, 0.662)
texture = ExtResource("2_ldey4")
script = ExtResource("3_4hx77")

[node name="Level6" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(0.7, 0.662)

[node name="cover_image" type="Sprite2D" parent="Level6"]
position = Vector2(710, 1016)
scale = Vector2(0.7, 0.662)
texture = ExtResource("2_ldey4")
script = ExtResource("3_4hx77")

[node name="Level7" type="Node2D" parent="."]
texture_filter = 1
scale = Vector2(0.7, 0.662)

[node name="cover_image" type="Sprite2D" parent="Level7"]
position = Vector2(1246, 1006)
scale = Vector2(0.7, 0.662)
texture = ExtResource("2_ldey4")
script = ExtResource("3_4hx77")
